--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_main"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.xiaofeng.startbaby.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+
+    <RadioGroup
+        android:id="@+id/main_raoup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        >
+
+        <RadioButton
+            android:id="@+id/main_radio_1"
+            style="@style/MainRadioStyle"
+            android:drawableTop="@drawable/home"
+            android:text="首页"
+            android:gravity="center"
+            />
+
+        <RadioButton
+            android:id="@+id/main_radio_2"
+            style="@style/MainRadioStyle"
+            android:drawableTop="@drawable/video"
+            android:text="视频"
+            android:gravity="center"
+            />
+
+        <RadioButton
+            android:id="@+id/main_radio_3"
+            style="@style/MainRadioStyle"
+            android:drawableTop="@drawable/community"
+            android:text="社区"
+            android:gravity="center"
+            />
+
+        <RadioButton
+            android:id="@+id/main_radio_4"
+            style="@style/MainRadioStyle"
+            android:drawableTop="@drawable/person"
+            android:text="我的"
+            android:gravity="center"
+            />
+    </RadioGroup>
+
+</LinearLayout>
