--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,15 @@
     </style>
 
 
+    <!-- ordinary application theme. -->
+    <style name="OrdinaryTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryO</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkO</item>
+        <item name="colorAccent">@color/colorAccentO</item>
+    </style>
+
+
     <!--Main文件中的style-->
     <style name="MainRadioStyle">
         <item name="android:layout_width">0dp</item>
@@ -31,10 +40,12 @@
         <item name="android:layout_weight">1</item>
         <item name="android:orientation">vertical</item>
     </style>
+
     <style name="PersonLayoutImage">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
     <style name="PersonLayoutText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -48,6 +59,7 @@
         <item name="android:padding">@dimen/defaultXSize</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
     <style name="PersonItemLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -64,5 +76,24 @@
         <item name="android:layout_marginLeft">@dimen/defaultXMSize</item>
         <item name="android:layout_marginRight">@dimen/defaultXMSize</item>
         <item name="android:padding">@dimen/defaultXSize</item>
+    </style>
+
+    <!--注册界面的样式-->
+    <style name="LayoutRegister">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/register_bg</item>
+        <item name="android:layout_marginLeft">@dimen/defaultXMSize</item>
+        <item name="android:layout_marginRight">@dimen/defaultXMSize</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="LayoutRegisterEdit">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">7</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@null</item>
+        <item name="android:padding">@dimen/defaultXSize</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
