--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,52 +7,57 @@
     android:orientation="vertical"
     tools:context="com.xiaofeng.startbaby.MainActivity">
 
-   <FrameLayout
-       android:id="@+id/main_frag"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="1"/>
+    <FrameLayout
+        android:id="@+id/main_frag"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"/>
 
     <RadioGroup
         android:id="@+id/main_raoup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="horizontal"
         android:background="@color/white"
+        android:orientation="horizontal"
         >
 
         <RadioButton
             android:id="@+id/main_radio_1"
             style="@style/MainRadioStyle"
             android:drawableTop="@drawable/home"
-            android:text="首页"
             android:gravity="center"
+            android:text="首页"
             />
 
         <RadioButton
             android:id="@+id/main_radio_2"
             style="@style/MainRadioStyle"
             android:drawableTop="@drawable/video"
-            android:text="视频"
             android:gravity="center"
+            android:text="视频"
             />
 
         <RadioButton
             android:id="@+id/main_radio_3"
             style="@style/MainRadioStyle"
             android:drawableTop="@drawable/community"
-            android:text="社区"
             android:gravity="center"
+            android:text="社区"
             />
 
         <RadioButton
             android:id="@+id/main_radio_4"
             style="@style/MainRadioStyle"
             android:drawableTop="@drawable/person"
-            android:text="我的"
             android:gravity="center"
+            android:text="我的"
             />
     </RadioGroup>
 
