--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,7 +46,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="+86"/>
+                android:text="+86"
+                android:id="@+id/textView4"/>
 
             <EditText
                 android:id="@+id/register_user_number"
@@ -59,6 +60,7 @@
             style="@style/LayoutRegister">
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -78,52 +80,69 @@
         </LinearLayout>
 
         <LinearLayout
-            style="@style/LayoutRegister">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="验证码"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/defaultXSize"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="7"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/defaultXMSize"
+                android:layout_weight="4"
+                android:background="@drawable/register_bg"
+                android:gravity="center"
+                >
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:gravity="center"
+                    android:text="验证码"/>
 
                 <EditText
                     android:id="@+id/register_identify_code"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
                     android:background="@null"
                     android:inputType="text"
+                    android:padding="@dimen/defaultXXSize"
                     android:textSize="@dimen/defaultXSize"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="80dp"
+                    android:layout_width="60dp"
                     android:layout_height="40dp"
-                    android:layout_margin="@dimen/defaultSize"
+                    android:layout_marginLeft="@dimen/defaultXSize"
+                    android:layout_marginRight="@dimen/defaultXSize"
                     android:src="@drawable/pic_placeholder"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/defaultSize"
                     android:src="@drawable/register_refresh"/>
 
                 <TextView
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:gravity="center|right"
                     android:text="换一下"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:id="@+id/textView"/>
+                    android:textColor="@color/colorPrimaryDark"/>
 
             </LinearLayout>
-
         </LinearLayout>
 
         <Button
