--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/search_view_bg"
             android:drawableLeft="@drawable/home_toolbar_search"
             android:gravity="center"
-            android:text="请输入您感兴趣的资讯"
+            android:text="@string/home_search_string"
             />
     </android.support.v7.widget.Toolbar>
 
@@ -47,16 +47,6 @@
             android:layout_toLeftOf="@+id/tab_check"
             android:background="@color/gray"/>
 
-        <CheckBox
-            android:id="@+id/home_tab_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/defaultXXSize"
-            android:background="@drawable/down"
-            android:button="@null"
-            android:checked="false"/>
-
     </LinearLayout>
 
     <View
@@ -64,19 +54,6 @@
         android:layout_height="1dp"
         android:background="@color/gray"/>
 
-    <LinearLayout
-        android:id="@+id/home_sort_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_recy_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/home_recy_layout"
@@ -89,7 +66,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"/>
-
     </LinearLayout>
 </LinearLayout>
 
