--- a/app/src/main/res/layout/fragment_home_ex_change.xml
+++ b/app/src/main/res/layout/fragment_home_ex_change.xml
@@ -2,11 +2,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.xiaofeng.startbaby.fragments.home.HomeRecommendFragment">
+             tools:context="com.xiaofeng.startbaby.fragments.HomeExChangeFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/home_recommend_recycler_view"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment"/>
 
 </FrameLayout>
