增加社区界面内容

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
             style="@style/MainRadioStyle"
             android:drawableTop="@drawable/home"
             android:gravity="center"
+            android:button="@null"
+            android:overScrollMode="never"
             android:text="首页"
             />
 
