--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -42,8 +42,8 @@
             android:id="@+id/viewpager"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"/>
-
+            android:layout_weight="2"
+            android:overScrollMode="never"/>
     </LinearLayout>
 
 </LinearLayout>
