--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/activity_register2"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_register2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,8 +25,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/number_register"/>
+            android:layout_marginLeft="@dimen/defaultSize"
+            android:text="@string/number_register"
+            android:textSize="@dimen/defaultXXXTextSize"/>
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
@@ -36,26 +37,41 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/register2_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            tools:text="我们已发送验证码到您的手机上"/>
+        <!--<TextView-->
+        <!--android:id="@+id/register2_text"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="我们已发送验证码"/>-->
 
-        <TextView
-            android:id="@+id/register2_number"
+        <!--<TextView-->
+        <!--android:id="@+id/register2_number"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="18513410034"-->
+        <!--android:textColor="@color/black"-->
+        <!--android:textSize="@dimen/defaultXLTextSize"/>-->
+        <EditText
+            android:id="@+id/register_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/defaultXLTextSize"
-            tools:text="18513410034"/>
+            android:layout_marginBottom="@dimen/defaultXXSize"
+            android:layout_marginLeft="@dimen/defaultXXXSize"
+            android:layout_marginRight="@dimen/defaultXXXSize"
+            android:background="@drawable/register_bg"
+            android:hint="请填写手机号"
+            android:inputType="text"
+            android:padding="@dimen/defaultXSize"
+            android:textSize="@dimen/defaultXTextSize"/>
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/defaultXXXSize"
+            android:layout_marginBottom="@dimen/defaultXXSize"
+            android:layout_marginLeft="@dimen/defaultXXXSize"
+            android:layout_marginRight="@dimen/defaultXXXSize"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -72,7 +88,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
                     android:gravity="center"
-                    android:text="验证码"/>
+                    android:text="验证码"
+                    android:textSize="@dimen/defaultXTextSize"/>
 
                 <EditText
                     android:id="@+id/register_identify_code"
@@ -82,8 +99,8 @@
                     android:background="@null"
                     android:hint="请填写验证码"
                     android:inputType="text"
-                    android:padding="@dimen/defaultXXSize"
-                    android:textSize="@dimen/defaultXSize"/>
+                    android:padding="@dimen/defaultXSize"
+                    android:textSize="@dimen/defaultXTextSize"/>
             </LinearLayout>
 
             <LinearLayout
@@ -95,8 +112,9 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="@dimen/defaultXXXSize"
-                    android:text="重新发送"/>
+                    android:padding="@dimen/defaultXXSize"
+                    android:text="获取验证码"
+                    android:textSize="@dimen/defaultXTextSize"/>
 
             </LinearLayout>
 
