--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -21,29 +21,49 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <com.xiaofeng.startbaby.view.VerticalTabLayout
-            android:id="@+id/tablayout"
-            android:layout_width="0dp"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#EDEDED"
-            android:visibility="visible"
-            app:indicator_color="#FFFFFF"
-            app:indicator_gravity="fill"
-            app:tab_height="50dp"
-            app:tab_mode="scrollable"/>
+            android:orientation="horizontal">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:overScrollMode="never"/>
-    </LinearLayout>
+            <com.xiaofeng.startbaby.view.VerticalTabLayout
+                android:id="@+id/tablayout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#EDEDED"
+                android:visibility="visible"
+                app:indicator_color="#FFFFFF"
+                app:indicator_gravity="fill"
+                app:tab_height="50dp"
+                app:tab_mode="scrollable"/>
 
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:overScrollMode="never"/>
+        </LinearLayout>
+
+        <!--<FrameLayout-->
+            <!--android:id="@+id/progress_bar_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/white">-->
+
+            <!--<ProgressBar-->
+                <!--android:id="@+id/progress_bar"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center"/>-->
+
+        <!--</FrameLayout>-->
+
+    </FrameLayout>
 </LinearLayout>
