--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -4,7 +4,9 @@
              android:layout_height="match_parent"
              tools:context="com.xiaofeng.startbaby.fragments.community.FollowFragment">
 
+
     <android.support.v7.widget.RecyclerView
+        android:overScrollMode="never"
         android:id="@+id/follow_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
