--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,20 +11,26 @@
         android:layout_height="?actionBarSize"
         android:background="@color/colorPrimary">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
 
+        <!--<TextView-->
+        <!--android:id="@+id/home_text_search"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="@dimen/defaultXSize"-->
+        <!--android:background="@drawable/search_view_bg"-->
+        <!--android:drawableLeft="@drawable/home_toolbar_search"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/home_search_string"-->
+        <!--/>-->
         <TextView
             android:id="@+id/home_text_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/defaultXSize"
-            android:background="@drawable/search_view_bg"
-            android:drawableLeft="@drawable/home_toolbar_search"
             android:gravity="center"
-            android:text="@string/home_search_string"
+            android:text="首页"
+            android:textColor="@color/white"
+            android:textSize="@dimen/defaultXXTextSize"
             />
     </android.support.v7.widget.Toolbar>
 
