--- a/app/src/main/res/layout/fragment_trian.xml
+++ b/app/src/main/res/layout/fragment_trian.xml
@@ -5,8 +5,9 @@
              tools:context="com.xiaofeng.startbaby.fragments.community.TrianFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/follow_recycler_view"
+        android:id="@+id/train_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:overScrollMode="never"/>
 
 </FrameLayout>
