--- a/app/src/main/res/layout/item_home_recommend_item.xml
+++ b/app/src/main/res/layout/item_home_recommend_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/item_commend_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:padding="@dimen/defaultMSize"
         android:src="@mipmap/ic_launcher"/>
@@ -24,23 +24,34 @@
             android:id="@+id/item_commend_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:text="语言训练"/>
 
-        <ImageView
-            android:id="@+id/item_commend_image_person"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_below="@id/item_commend_title"
-            android:src="@mipmap/ic_launcher"/>
-
-        <TextView
-            android:id="@+id/item_commend_count"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/item_commend_title"
-            android:layout_marginLeft="@dimen/defaultSize"
-            android:layout_toRightOf="@id/item_commend_image_person"
-            android:text="300"/>
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/item_commend_image_person"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+
+                android:scaleType="centerInside"
+                android:src="@drawable/dz_personal_friend_add"/>
+
+            <TextView
+                android:id="@+id/item_commend_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/defaultSize"
+                android:gravity="start"
+                android:text="300"/>
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
